--- a/src/IATec.Shared.Api.csproj
+++ b/src/IATec.Shared.Api.csproj
@@ -10,7 +10,8 @@
         <Description>Project developed to help IATec teams to develop their projects faster.</Description>
         <Copyright>@IATec</Copyright>
         <RootNamespace>IATec.Shared.Api</RootNamespace>
-        <Version>0.1.0</Version>
+        <Version>0.1.1</Version>
+        <PackageIconUrl>https://assets-services-dev.sdasystems.org/images/icons/standard.library.icon.png</PackageIconUrl>
         <PackageIcon>icon.png</PackageIcon>
         <RepositoryUrl>https://github.com/iatecbr/IATec.Shared.Net.Api</RepositoryUrl>
         <RepositoryType>Git</RepositoryType>
@@ -22,12 +23,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <None Include="Assets\icon.png" Pack="true" PackagePath="" />
+        <None Include="..\resources\icons\icon.png" Pack="true" PackagePath=""/>
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="FluentResults" Version="3.16.0" />
-      <PackageReference Include="IATec.Shared.Domain" Version="0.2.0" />
-      <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
+        <PackageReference Include="FluentResults" Version="3.16.0"/>
+        <PackageReference Include="IATec.Shared.Domain" Version="0.2.0"/>
+        <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0"/>
     </ItemGroup>
 </Project>
