--- a/src/IATec.Shared.Api.csproj
+++ b/src/IATec.Shared.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <OutputType>Library</OutputType>
@@ -10,7 +10,7 @@
         <Description>Project developed to help IATec teams to develop their projects faster.</Description>
         <Copyright>@IATec</Copyright>
         <RootNamespace>IATec.Shared.Api</RootNamespace>
-        <Version>0.2.3</Version>
+        <Version>0.3.0</Version>
         <PackageIconUrl>https://assets-services-dev.sdasystems.org/images/icons/standard.library.icon.png</PackageIconUrl>
         <PackageIcon>icon.png</PackageIcon>
         <RepositoryUrl>https://github.com/iatecbr/IATec.Shared.Net.Api</RepositoryUrl>
@@ -28,7 +28,7 @@
 
     <ItemGroup>
         <PackageReference Include="FluentResults" Version="3.16.0"/>
-        <PackageReference Include="IATec.Shared.Domain" Version="0.2.0"/>
+        <PackageReference Include="IATec.Shared.Domain" Version="0.10.0"/>
         <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0"/>
     </ItemGroup>
 </Project>
