--- a/src/IATec.Shared.Api.csproj
+++ b/src/IATec.Shared.Api.csproj
@@ -10,7 +10,7 @@
         <Description>Project developed to help IATec teams to develop their projects faster.</Description>
         <Copyright>@IATec</Copyright>
         <RootNamespace>IATec.Shared.Api</RootNamespace>
-        <Version>1.0.0</Version>
+        <Version>1.0.0-RC1</Version>
         <PackageIconUrl>https://assets-services-dev.sdasystems.org/images/icons/standard.library.icon.png</PackageIconUrl>
         <PackageIcon>icon.png</PackageIcon>
         <RepositoryUrl>https://github.com/iatecbr/IATec.Shared.Net.Api</RepositoryUrl>
@@ -28,7 +28,7 @@
 
     <ItemGroup>
         <PackageReference Include="FluentResults" Version="3.16.0"/>
-        <PackageReference Include="IATec.Shared.Domain" Version="1.0.0"/>
+        <PackageReference Include="IATec.Shared.Domain" Version="1.0.0-RC1"/>
         <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0"/>
     </ItemGroup>
 </Project>
